Added react native elements

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-paper": "^4.7.1",
     "react-native-plain-calendar": "^1.0.5",
@@ -24,7 +25,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-segmented-control-tab": "^3.4.1",
-    "react-native-vector-icons": "^8.0.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.3",
     "react-navigation-material-bottom-tabs": "^2.3.3",
     "react-navigation-stack": "^2.10.2",
