--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.7.1",
     "react-native-plain-calendar": "^1.0.5",
     "react-native-reanimated": "^1.13.2",
