--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
     "native-base": "^2.15.2",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-animatable": "^1.3.3",
