--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-calendars": "^1.1259.0",
+    "react-native-common-date-picker": "^2.3.4",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.7.1",
