--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-segmented-control-tab": "^3.4.1",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "12.1.1",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^8.0.0",
     "react-navigation": "^4.4.3",
     "react-navigation-material-bottom-tabs": "^2.3.3",
     "react-navigation-stack": "^2.10.2",
-    "react-navigation-tabs": "^2.10.1"
+    "react-navigation-tabs": "^2.10.1",
+    "victory-native": "^35.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
